test/e2e/canary/autopilot-operator.yaml
controlPlaneNs: istio-system
enableLeaderElection: true
meshProvider: Istio
metricsAddr: :9091
version: 0.0.1
workInterval: 5s
