test/e2e/canary/autopilot.yaml
apiVersion: autopilot.examples.io/v1
kind: CanaryDeployment
operatorName: canary-operator
phases:

  - description: Creating deployments for the canary
    initial: true
    name: Initializing
    inputs:
      - deployments
    outputs:
      - deployments
      - services
      - virtualservices

  - description: Waiting for the target deployment to be modified
    name: Waiting
    inputs:
      - deployments
      - virtualservices
    outputs:
      - deployments
      - virtualservices

  - description: Evaluating the canary
    inputs:
      - metrics
      - virtualservices
    name: Evaluating
    outputs:
      - virtualservices

  - description: Promoting the canary
    name: Promoting
    inputs:
      - deployments
      - virtualservices
    outputs:
      - deployments
      - virtualservices

  - description: Rolling back the canary
    name: RollBack
    inputs:
      - deployments
      - virtualservices
    outputs:
      - deployments
      - virtualservices

queries:
  - name: myquery
    queryTemplate: |
      sum
